# PMR-SeedGenerator

./: itemhints.py  parse.py  pyproject.toml  random_seed.py  spoilerlog.py  table.py  worldgraph.py
db/: actor.py  actor_attribute.py  block.py  db.py  item.py  map_area.py  map_meta.py  node.py  option.py  palette.py  quiz.py
metadata/: area_name_mappings.py  song_data.py
models/: MarioInventory.py
models/options/: MysteryOptionSet.py  OptionSet.py
pmrseedgen/: randomizer.py
pmrseedgen/db/: actor_params.py  move.py
pmrseedgen/models/options/: option_utility.py
pmrseedgen/rando_modules/: random_actor_stats.py  random_audio.py  random_entrances.py  random_formations.py  random_movecosts.py  random_palettes.py  random_quizzes.py
rando_modules/: logic.py  modify_entrances.py  modify_itempool.py  random_blocks.py  random_mystery.py  random_partners.py  random_shop_prices.py
