[project]
name = "pmrseedgen"
version="2023.11.20"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "cython"
]
build-backend = "setuptools.build_meta"

dependencies = [
    "peewee==3.14.4",
    "pyyaml",
    "firebase-admin==5.2.0"
]

[tool.setuptools]
packages = [
    "pmrseedgen",
    "db",
    "maps",
    "maps.graph_edges",
    "maps.graph_edges.base_graph",
    "maps.graph_edges.bc_bossrush",
    "maps.graph_edges.bc_shorten",
    "maps.graph_edges.gear_location_shuffle",
    "maps.graph_edges.glitched_logic",
    "maps.graph_edges.partner_upgrade_shuffle",
    "maps.graph_edges.star_hunt",

    "metadata",
    "models",
    "models.options",
    "rando_enums",
    "rando_modules",
]

