[project]
name = "pmrseedgen"
version="2023.11.20"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "cython"
]
build-backend = "setuptools.build_meta"

dependencies = [
    "peewee==3.17.0",
    "pyyaml",
    "firebase-admin==5.2.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.sqlite"]

[tool.setuptools.package-dir]
pmrseedgen = "."
"pmrseedgen.db" = "db"
"pmrseedgen.maps" = "maps"
"pmrseedgen.maps.graph_edges" = "maps/graph_edges"
"pmrseedgen.maps.graph_edges.base_graph" = "maps/graph_edges/base_graph"
"pmrseedgen.maps.graph_edges.bc_bossrush" = "maps/graph_edges/bc_bossrush"
"pmrseedgen.maps.graph_edges.bc_shorten" = "maps/graph_edges/bc_shorten"
"pmrseedgen.maps.graph_edges.gear_location_shuffle" = "maps/graph_edges/gear_location_shuffle"
"pmrseedgen.maps.graph_edges.glitched_logic" = "maps/graph_edges/glitched_logic"
"pmrseedgen.maps.graph_edges.partner_upgrade_shuffle" = "maps/graph_edges/partner_upgrade_shuffle"
"pmrseedgen.maps.graph_edges.star_hunt" = "maps/graph_edges/star_hunt"
"pmrseedgen.metadata" = "metadata"
"pmrseedgen.models" = "models"
"pmrseedgen.models.options" = "models/options"
"pmrseedgen.rando_enums" = "rando_enums"
"pmrseedgen.rando_modules" = "rando_modules"
"pmrseedgen.presets" = "presets"