[project]
name = "pmrseedgen"
version="2023.11.20"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "cython"
]
build-backend = "setuptools.build_meta"

dependencies = [
    "peewee==3.17.0",
    "pyyaml",
    "firebase-admin==5.2.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.sqlite"]

[tool.setuptools.package-dir]
pmrseedgen = "pmrseedgen"
"pmrseedgen.db" = "pmrseedgen/db"
"pmrseedgen.maps" = "pmrseedgen/maps"
"pmrseedgen.maps.graph_edges" = "pmrseedgen/maps/graph_edges"
"pmrseedgen.maps.graph_edges.base_graph" = "pmrseedgen/maps/graph_edges/base_graph"
"pmrseedgen.maps.graph_edges.bc_bossrush" = "pmrseedgen/maps/graph_edges/bc_bossrush"
"pmrseedgen.maps.graph_edges.bc_shorten" = "pmrseedgen/maps/graph_edges/bc_shorten"
"pmrseedgen.maps.graph_edges.gear_location_shuffle" = "pmrseedgen/maps/graph_edges/gear_location_shuffle"
"pmrseedgen.maps.graph_edges.glitched_logic" = "pmrseedgen/maps/graph_edges/glitched_logic"
"pmrseedgen.maps.graph_edges.partner_upgrade_shuffle" = "pmrseedgen/maps/graph_edges/partner_upgrade_shuffle"
"pmrseedgen.maps.graph_edges.star_hunt" = "pmrseedgen/maps/graph_edges/star_hunt"
"pmrseedgen.metadata" = "pmrseedgen/metadata"
"pmrseedgen.models" = "pmrseedgen/models"
"pmrseedgen.models.options" = "pmrseedgen/models/options"
"pmrseedgen.rando_enums" = "pmrseedgen/rando_enums"
"pmrseedgen.rando_modules" = "pmrseedgen/rando_modules"
"pmrseedgen.presets" = "pmrseedgen/presets"